crates/aiken-lang/src/tests/snapshots/trace_if_false_fail.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn main(self) {\n    (fail @\"whatever\")?\n}\n"
---
fn main(self) {
  (fail @"whatever")?
}
