crates/aiken-lang/src/tests/snapshots/trace_if_false_pipeline.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn main(self) {\n  (self.extra_signatories |> list.has(self.extra_signatories, config.cold_key))?\n}\n"
---
fn main(self) {
  (self.extra_signatories |> list.has(self.extra_signatories, config.cold_key))?
}
