crates/aiken-lang/src/tests/snapshots/trace_if_false_todo.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn main(self) {\n    (todo @\"whatever\")?\n}\n"
---
fn main(self) {
  (todo @"whatever")?
}
