crates/aiken-lang/src/tests/snapshots/trace_if_false_unop.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn main(self) {\n    (!True)?\n}\n"
---
fn main(self) {
  (!True)?
}
