crates/aiken-lang/src/tests/snapshots/tuple_type_alias.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\ntype RoyaltyToken = (PolicyId, AssetName)\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        TypeAlias(
            TypeAlias {
                alias: "RoyaltyToken",
                annotation: Tuple {
                    location: 20..41,
                    elems: [
                        Constructor {
                            location: 21..29,
                            module: None,
                            name: "PolicyId",
                            arguments: [],
                        },
                        Constructor {
                            location: 31..40,
                            module: None,
                            name: "AssetName",
                            arguments: [],
                        },
                    ],
                },
                doc: None,
                location: 0..41,
                parameters: [],
                public: false,
                tipo: (),
            },
        ),
    ],
    kind: Validator,
}
