crates/aiken-lang/src/tests/snapshots/type_alias.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\ntype Thing = Option<Int>\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        TypeAlias(
            TypeAlias {
                alias: "Thing",
                annotation: Constructor {
                    location: 13..24,
                    module: None,
                    name: "Option",
                    arguments: [
                        Constructor {
                            location: 20..23,
                            module: None,
                            name: "Int",
                            arguments: [],
                        },
                    ],
                },
                doc: None,
                location: 0..24,
                parameters: [],
                public: false,
                tipo: (),
            },
        ),
    ],
    kind: Validator,
}
