crates/aiken-lang/src/tests/snapshots/type_annotation_with_module_prefix.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\nuse aiken\n\npub fn go() -> aiken.Option<Int> {\n  False\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Use(
            Use {
                as_name: None,
                location: 0..9,
                module: [
                    "aiken",
                ],
                package: (),
                unqualified: [],
            },
        ),
        Fn(
            Function {
                arguments: [],
                body: Var {
                    location: 48..53,
                    name: "False",
                },
                doc: None,
                location: 11..43,
                name: "go",
                public: true,
                return_annotation: Some(
                    Constructor {
                        location: 26..43,
                        module: Some(
                            "aiken",
                        ),
                        name: "Option",
                        arguments: [
                            Constructor {
                                location: 39..42,
                                module: None,
                                name: "Int",
                                arguments: [],
                            },
                        ],
                    },
                ),
                return_type: (),
                end_position: 54,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
