crates/aiken-lang/src/tests/snapshots/unqualified_imports.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\nuse std/address.{Address as A, thing as w}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Use(
            Use {
                as_name: None,
                location: 0..42,
                module: [
                    "std",
                    "address",
                ],
                package: (),
                unqualified: [
                    UnqualifiedImport {
                        location: 17..29,
                        name: "Address",
                        as_name: Some(
                            "A",
                        ),
                        layer: Value,
                    },
                    UnqualifiedImport {
                        location: 31..41,
                        name: "thing",
                        as_name: Some(
                            "w",
                        ),
                        layer: Value,
                    },
                ],
            },
        ),
    ],
    kind: Validator,
}
